--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "koa-router": "12.0.1",
     "koa-sslify": "5.0.1",
     "maxmind": "4.3.21",
-    "protobufjs": "7.4.0"
+    "protobufjs": "7.4.0",
+    "simple-get": "^4.0.1",
+    "tar-stream": "^3.1.7"
   },
   "devDependencies": {
     "@types/koa": "2.15.0",
     "@types/koa-router": "7.4.8",
     "@types/koa-sslify": "4.0.6",
+    "@types/simple-get": "^4.0.3",
+    "@types/tar-stream": "^3.1.3",
     "copyfiles": "2.4.1",
     "nodemon": "3.1.4",
     "ts-node": "10.9.2",
