--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "dotenv": "16.4.5",
     "koa": "2.15.3",
-    "koa-router": "12.0.1",
-    "koa-sslify": "5.0.1",
+    "koa-router": "13.0.1",
     "maxmind": "4.3.21",
     "protobufjs": "7.4.0",
     "simple-get": "^4.0.1",
@@ -25,12 +24,12 @@
   "devDependencies": {
     "@types/koa": "2.15.0",
     "@types/koa-router": "7.4.8",
-    "@types/koa-sslify": "4.0.6",
     "@types/simple-get": "^4.0.3",
     "@types/tar-stream": "^3.1.3",
+    "@vercel/node": "^3.2.14",
     "copyfiles": "2.4.1",
     "nodemon": "3.1.4",
     "ts-node": "10.9.2",
-    "typescript": "5.5.4"
+    "typescript": "5.6.2"
   }
 }
