--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "author": "Natan Chiodi <contact@natanchiodi.fr>",
   "license": "MIT",
   "dependencies": {
+    "@koa/bodyparser": "^5.1.1",
     "dotenv": "16.4.5",
     "koa": "2.15.3",
     "koa-router": "13.0.1",
     "maxmind": "4.3.21",
     "protobufjs": "7.4.0",
+    "raw-body": "^3.0.0",
     "simple-get": "^4.0.1",
     "tar-stream": "^3.1.7"
   },
