--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/koa": "2.15.0",
     "@types/koa-router": "7.4.8",
+    "@types/node": "^22.5.5",
     "@types/simple-get": "^4.0.3",
     "@types/tar-stream": "^3.1.3",
     "@vercel/node": "^3.2.14",
