--- a/package.json
+++ b/package.json
@@ -2,38 +2,14 @@
   "name": "spotify-mobile-lyrics-api",
   "version": "1.0.0",
   "description": "This API overrides the Spotify API endpoint used in the Spotify mobile app to fetch lyrics for the currently playing song.",
-  "main": "src/server.ts",
-  "scripts": {
-    "dev": "nodemon --exec ts-node src/server.ts",
-    "build": "npm run check_db && tsc -p tsconfig.build.json && copyfiles db/* dist && copyfiles protos/* dist",
-    "start": "node dist/server.js",
-    "pm2": "npm run build && pm2 start npm --name spotify-mobile-lyrics-api -- start",
-    "serve": "npm run build && npm run start",
-    "check_db": "ts-node scripts/check_country_db.ts"
-  },
   "author": "Natan Chiodi <contact@natanchiodi.fr>",
   "license": "MIT",
   "dependencies": {
-    "@koa/bodyparser": "^5.1.1",
-    "dotenv": "16.4.5",
-    "koa": "2.15.3",
-    "koa-router": "13.0.1",
-    "maxmind": "4.3.21",
-    "protobufjs": "7.4.0",
-    "raw-body": "^3.0.0",
-    "simple-get": "^4.0.1",
-    "tar-stream": "^3.1.7"
+    "@vercel/node": "^3.2.17",
+    "protobufjs": "7.4.0"
   },
   "devDependencies": {
-    "@types/koa": "2.15.0",
-    "@types/koa-router": "7.4.8",
     "@types/node": "^22.5.5",
-    "@types/simple-get": "^4.0.3",
-    "@types/tar-stream": "^3.1.3",
-    "@vercel/node": "^3.2.14",
-    "copyfiles": "2.4.1",
-    "nodemon": "3.1.4",
-    "ts-node": "10.9.2",
     "typescript": "5.6.2"
   }
 }
