--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Natan Chiodi <contact@natanchiodi.fr>",
   "license": "MIT",
   "dependencies": {
-    "@vercel/kv": "^3.0.0",
     "@vercel/node": "^3.2.17",
-    "protobufjs": "7.4.0"
+    "protobufjs": "7.4.0",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
