--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "@vercel/node": "^3.2.17",
+    "languagedetect": "^2.0.0",
     "protobufjs": "7.4.0",
     "redis": "^4.7.0"
   },
