--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "description": "This API overrides the Spotify API endpoint used in the Spotify mobile app to fetch lyrics for the currently playing song.",
   "author": "Natan Chiodi <contact@natanchiodi.fr>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc -p tsconfig.build.json",
+    "start": "node adapter/node.mjs"
+  },
   "dependencies": {
+    "@bufbuild/protobuf": "^2.2.0",
     "@vercel/node": "^3.2.19",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "h3": "^1.13.0",
+    "h3-compression": "^0.3.2",
     "languagedetect": "^2.0.0",
-    "protobufjs": "7.4.0",
     "redis": "^4.7.0"
   },
   "devDependencies": {
+    "@bufbuild/buf": "^1.45.0",
+    "@bufbuild/protoc-gen-es": "^2.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.7.5",
     "typescript": "5.6.2"
   }
