--- a/.github/workflows/cloudflare.yml
+++ b/.github/workflows/cloudflare.yml
@@ -11,6 +11,10 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
