:bug: Fix body related issues

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     },
     "rewrites": [
         {
+            "source": "/bootstrap/v1/bootstrap",
+            "destination": "https://spclient.wg.spotify.com/bootstrap/v1/bootstrap"
+        },
+        {
             "source": "/(.*)",
             "destination": "/api/vercel.ts"
         }
