:sparkles: Various improvements

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,13 @@ PORT=443
 
 # Find a detailed guide on how to get your Spotify SP_DC cookie here: https://github.com/akashrchandran/syrics/wiki/Finding-sp_dc
 SP_DC=your-spotify-cookie
+
+# Enable this for debugging purposes.
+LOG_REQUESTS=false
+
+# The database is optional.
+# Use SQLite if you can use the filesystem, or MySQL/Postgres if you have a remote database.
+DATABASE_TYPE=sqlite
+
+# DATABASE_TYPE=mysql or postgres
+# DATABASE_URL=your-database-uri
